Removing species pages form this module. Adds button for region selection.

--- a/client/views/location/nav.html
+++ b/client/views/location/nav.html
@@ -15,7 +15,7 @@
          <!-- Collect the nav links, forms, and other content for toggling -->
          <div class="collapse navbar-collapse visible-xs" id="bs-example-navbar-collapse-1" collapse="!isCollapsed">
            <ul class="nav navbar-nav">
-
+              <li><a mol-region-selector>Select a region</a></li>
            </ul>
            <ul class="nav navbar-nav visible-xxxs visible-xxs">
                <li>
