--- a/client/partials/common/header.html
+++ b/client/partials/common/header.html
@@ -7,8 +7,7 @@
     <nav class="main_navigation hidden-xxs">
         <ul class="menu">
             <li class="tab">
-                <a ui-sref="species.overview({scientficname:species.scientificname})"
-                   ui-sref-active="selected">
+                <a ng-href="http://species.mol.org/species/{{species.scientificname}}">
                   <i class="fa fa-info"></i>Species</a>
             </li>
             <li class="tab">
