--- a/server/templates/html/index.html
+++ b/server/templates/html/index.html
@@ -76,6 +76,7 @@
     <script src="/client/components/mol-ui-components/consensus-map/templates.js?{{rand}}"></script>
     <script src="/client/components/mol-ui-components/consensus-map/component.js?{{rand}}"></script>
 
+    <script src="/client/components/mol-ui-components/taxa-service/component.js?{{rand}}"></script>
     <script src="/client/components/mol-ui-components/taxa-counts/templates.js?{{rand}}"></script>
     <script src="/client/components/mol-ui-components/taxa-counts/component.js?{{rand}}"></script>
 
@@ -84,6 +85,8 @@
 
     <script src="/client/components/mol-ui-components/region-selector/templates.js?{{rand}}"></script>
     <script src="/client/components/mol-ui-components/region-selector/component.js?{{rand}}"></script>
+    <link rel="stylesheet" href="/client/components/mol-ui-components/region-selector/component.css?{{rand}}"></script>
+
 
     <script src="/client/js/app.js?{{rand}}"></script>
 {% endif %}
