Adding a model controller to the location view.

--- a/client/views/location/main.html
+++ b/client/views/location/main.html
@@ -11,7 +11,7 @@
     ng-show="region">
     <mol-loading-indicator
       style="float: center"></mol-loading-indicator>
-    <mol-taxa-counts class="column" region="region" taxon="taxon"></mol-taxa-counts>
+    <mol-taxa-counts class="column" location="region" taxon="taxon"></mol-taxa-counts>
     <mol-species-list class="column" ng-show="taxon" taxon="taxon" species="species"></mol-species-list>
     <mol-species-detail class="column" ng-show="species" species="species"></mol-species-detail>
   </div>
