--- a/server/templates/html/index.html
+++ b/server/templates/html/index.html
@@ -85,9 +85,10 @@
 
     <script src="/client/components/mol-ui-components/region-selector/templates.js?{{rand}}"></script>
     <script src="/client/components/mol-ui-components/region-selector/component.js?{{rand}}"></script>
+
     <link rel="stylesheet" href="/client/components/mol-ui-components/region-selector/component.css?{{rand}}"></script>
 
-
+    <script src="/client/views/location/controller.js?{{rand}}"></script>
     <script src="/client/js/app.js?{{rand}}"></script>
 {% endif %}
 </body>
