Adding some more models.

--- a/client/views/location/main.html
+++ b/client/views/location/main.html
@@ -2,8 +2,7 @@
 <div ng-include src="'/app/views/location/nav.html'"></div>
 <!--Species info view -->
 <div id="location-container" class="location-container">
-  <div mol-location-map class="mol-location-map"
-    location="region"></div>
+  <div mol-location-map class="mol-location-map" region="region"></div>
   <div resizable
     r-flex="true"
     r-directions="['left']"
