--- a/client/views/location/nav.html
+++ b/client/views/location/nav.html
@@ -15,7 +15,7 @@
          <!-- Collect the nav links, forms, and other content for toggling -->
          <div class="collapse navbar-collapse visible-xs" id="bs-example-navbar-collapse-1" collapse="!isCollapsed">
            <ul class="nav navbar-nav">
-              <li><a mol-region-selector region="region">Search for species by region</a></li>
+              <li><a mol-region-selector region="model.region">Search for species by region</a></li>
               <li><a >Search for species on the map</a></li>
 
            </ul>
