--- a/client/css/mol-theme.css
+++ b/client/css/mol-theme.css
@@ -48,11 +48,15 @@ body, caption, th, td, input, textarea, select, option, legend, fieldset {
 	}
 }
 .logo a {
-	display: block;
+	display: table-cell;
 	height:60px;
 }
 .logo img {
 	width: 160px;
+}
+.logo .gmbalogo img {
+    width: 100px;
+    margin-left: 10px;
 }
 @media (min-width: 740px) {
 	nav {
