--- a/client/partials/common/header.html
+++ b/client/partials/common/header.html
@@ -2,6 +2,8 @@
     <figure class="logo">
         <a href="http://www.mol.org">
             <img src="/app/img/logo.png" alt="Map of Life" /></a>
+        <a class="gmbalogo" href="http://www.mountainbiodiversity.org/">
+            <img src="http://www.mountainbiodiversity.org/img/gmba_logo.jpg" alt="GMBA" /></a>
     </figure>
     <mol-auth class="mol-auth" user="user"></mol-auth>
     <nav class="main_navigation hidden-xxs">
