--- a/client/views/location/nav.html
+++ b/client/views/location/nav.html
@@ -16,7 +16,7 @@
          <div class="collapse navbar-collapse visible-xs" id="bs-example-navbar-collapse-1" collapse="!isCollapsed">
            <ul class="nav navbar-nav">
               <li><a mol-region-selector region="model.region">Search for species by region</a></li>
-              <li><a >Search for species on the map</a></li>
+              <li><a ng-click="reset()">Search for species on the map</a></li>
 
            </ul>
            <ul class="nav navbar-nav visible-xxxs visible-xxs">
